--- a/data-analyst.html
+++ b/data-analyst.html
@@ -55,7 +55,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oYrAafwT&__jvst=Employee+Referral&__jvsd=sUzQygwC&__jvsc=Twitter&bid=nPkHTKwY'>Premier Research Careers - Senior Biostatistician</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oYrAafwT&__jvst=Employee+Referral&__jvsd=sUzQygwC&__jvsc=Twitter&bid=nPkHTKwY'>Premier Research Careers - Senior Biostatistician</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
@@ -105,7 +105,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://eurobank.workable.com/j/094CAC131F'>Eurobank Ergasias SA - Jobs: Data Governance Business Analyst - Apply online</a></h5> 
+<h5><a href='https://eurobank.workable.com/j/094CAC131F'>Eurobank Ergasias SA - Jobs: Data Governance Business Analyst - Apply online</a></h5> 
 <p><span class="badge badge-light">Greece</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -113,11 +113,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/KGSTechnologyGroupInc/743999692112367-entry-level-data-analyst'>KGS Technology Group Inc Entry Level Data Analyst | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/KGSTechnologyGroupInc/743999692112367-entry-level-data-analyst'>KGS Technology Group Inc Entry Level Data Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://aginic.workable.com/jobs/1054483'>Jobs: Graduate Data Analyst (Canberra) - Apply online - Aginic</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://aginic.workable.com/jobs/1054483'>Jobs: Graduate Data Analyst (Canberra) - Apply online - Aginic</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 17, 2019 ... Apply online for the job of Graduate Data Analyst (Canberra) at Aginic.</p>
 <hr/>
@@ -181,11 +181,11 @@ application. LinkedIn profile. Loading. Apply with Linkedin. Profile added.</p>
 <p>3 days ago ... If yes, do you have any reason to believe that your acceptance of employment 
 from Ironclad Technology Services would breach or violate any non-compete?...</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oOrAafwJ&__jvst=Employee+Referral&__jvsd=sUzQygwC&__jvsc=Twitter&bid=npSsSKwQ'>Premier Research Careers - Senior Biostatistician</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oOrAafwJ&__jvst=Employee+Referral&__jvsd=sUzQygwC&__jvsc=Twitter&bid=npSsSKwQ'>Premier Research Careers - Senior Biostatistician</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://stjhs.referrals.selectminds.com/jobs/senior-clinical-data-analyst-quality-assurance-full-time-days-8-hours-41251'>Senior Clinical Data Analyst - Quality Assurance, Full Time, Days, 8 Hours - St. Joseph Health Careers</a></h5> 
+<h5><a href='https://stjhs.referrals.selectminds.com/jobs/senior-clinical-data-analyst-quality-assurance-full-time-days-8-hours-41251'>Senior Clinical Data Analyst - Quality Assurance, Full Time, Days, 8 Hours - St. Joseph Health Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -264,7 +264,7 @@ not subject you to adverse treatment). Our company values diversity.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://ellaktor.workable.com/jobs/1076217'>Jobs: Monitoring - Data Analyst / Engineer - AKTOR SA ... - Ellaktor</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ellaktor.workable.com/jobs/1076217'>Jobs: Monitoring - Data Analyst / Engineer - AKTOR SA ... - Ellaktor</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 14, 2019 ... Apply online for the job of Monitoring - Data Analyst / Engineer - AKTOR SA at 
 Ellaktor.</p>
@@ -310,7 +310,7 @@ South Carolina. Apply. Description. Description. Want to be a part of a growing?
 <p><span class="badge badge-light">Cambridge</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/criteo/a8b10204-5503-4673-aa93-f9b2d9d53163'>Criteo - Data Analyst, Large Customers</a></h5> 
+<h5><a href='https://jobs.lever.co/criteo/a8b10204-5503-4673-aa93-f9b2d9d53163'>Criteo - Data Analyst, Large Customers</a></h5> 
 <p><span class="badge badge-light">Sydney Paris</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -375,7 +375,7 @@ at BAME Recruitment Limited.</p>
 <p><span class="badge badge-light">Vancouver, British Columbia Canada</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/shorelight/job/okaxafwV'>Shorelight Education Careers - Shorelight Education ? Data Analyst I</a></h5> 
+<h5><a href='https://jobs.jobvite.com/shorelight/job/okaxafwV'>Shorelight Education Careers - Shorelight Education ? Data Analyst I</a></h5> 
 <p><span class="badge badge-light">Boston,</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -409,11 +409,11 @@ interpreting data; Transform data to information that will facilitate decision m
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/unqork/jobs/4364150002'>Job Application for Data Analytics - Senior Analyst at Unqork</a></h5> 
+<h5><a href='https://boards.greenhouse.io/unqork/jobs/4364150002'>Job Application for Data Analytics - Senior Analyst at Unqork</a></h5> 
 <p><span class="badge badge-light">New York City</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://experian.referrals.selectminds.com/jobs/data-analyst-12849'>Data Analyst - Experian Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://experian.referrals.selectminds.com/jobs/data-analyst-12849'>Data Analyst - Experian Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 10, 2019 ... Experian is recruiting a Data Analyst to join our Data Science Team based in 
 Nottingham.The Data Science Team build and maintain many of Experian...</p>
@@ -423,11 +423,11 @@ Nottingham.The Data Science Team build and maintain many of Experian...</p>
 <p>5 days ago ... The Database Analyst is a member of the Customer Success team, providing 
 support for any customer licensing a Clinical Solutions product. In this...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/ddb/job/oh0yafwJ'>DDB Careers - Data analyst/CRO</a></h5> 
+<h5><a href='http://jobs.jobvite.com/ddb/job/oh0yafwJ'>DDB Careers - Data analyst/CRO</a></h5> 
 <p><span class="badge badge-light">Barcelona Barcelona</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://gsk.wd5.myworkdayjobs.com/GSKCareers/job/USA---New-Jersey---Warren/Tech-Early-Talent---Data-Analyst_214748'>Tech Early Talent ? Data Analyst</a></h5> 
+<h5><a href='https://gsk.wd5.myworkdayjobs.com/GSKCareers/job/USA---New-Jersey---Warren/Tech-Early-Talent---Data-Analyst_214748'>Tech Early Talent ? Data Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 10, 2019 ... Within these strategic areas, we see this work touching upon established and 
 emergent technologies, including the transition to digitized data (vs. paper-based
